[project]
name = "hun_args_history"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "hun0219", email = "gsw98000@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]

[tool.pdm.scripts]
test = "pytest"
ctest = "pytest --cov"
stest = "pytest -s"
#venvoff = "deactivate"
#venvon = "source .venv/bin/activate"

[project.scripts]
my-history = 'hun_args_history.cli:cmd'


[project.urls]
Homepage = "https://github.com/hun0219/args_history"
Issues = "https://github.com/hun0219/args_history/issues"
